--- a/bin/main/.gitignore
+++ b/bin/main/.gitignore
@@ -1,2 +1,7 @@
-/gestorAplicacion/
+/CanastaTest.class
+/MainPruebas.class
+/PanaderiaTest.class
+/SerializationTest.class
 /UIMain/
+/baseDatos/
+/gestorAplicacion/
